--- a/apps/default/src/app/app.component.html
+++ b/apps/default/src/app/app.component.html
@@ -1,1 +1,1 @@
-<change-detection-strategy-examples-nx-welcome></change-detection-strategy-examples-nx-welcome>
+<app-item *ngFor="let item of data" [model]="item"></app-item>
