add recursive component

--- a/apps/default/src/app/app.component.html
+++ b/apps/default/src/app/app.component.html
@@ -1,1 +1,2 @@
-<app-item *ngFor="let item of data" [model]="item"></app-item>
+<app-items [items]="data"></app-items>
+<app-items [items]="data"></app-items>
