--- a/apps/default/src/app/components/items/items.component.scss
+++ b/apps/default/src/app/components/items/items.component.scss
@@ -1,4 +1,8 @@
 .app-items {
-  padding-left: 5px;
+  padding-left: 50px;
   padding-top: 5px;
+  padding-right: 5px;
+  &--first {
+    padding-left: 5px;
+  }
 }
