--- a/apps/default/src/app/app.component.html
+++ b/apps/default/src/app/app.component.html
@@ -1,2 +1,6 @@
-<app-items [items]="data"></app-items>
-<app-items [items]="data"></app-items>
+<div class="container">
+  <div class="row">
+    <div class="col"><app-items [items]="data"></app-items></div>
+    <div class="col"><app-items [items]="data"></app-items></div>
+  </div>
+</div>
