--- a/apps/default/src/app/app.component.html
+++ b/apps/default/src/app/app.component.html
@@ -3,4 +3,92 @@
     <div class="col"><app-items [items]="data"></app-items></div>
     <div class="col"><app-items [items]="data"></app-items></div>
   </div>
+  <div class="row">
+    <div class="col"><app-items [items]="data"></app-items></div>
+    <div class="col"><app-items [items]="data"></app-items></div>
+  </div>
+  <div class="row">
+    <div class="col"><app-items [items]="data"></app-items></div>
+    <div class="col"><app-items [items]="data"></app-items></div>
+  </div>
+  <div class="row">
+    <div class="col"><app-items [items]="data"></app-items></div>
+    <div class="col"><app-items [items]="data"></app-items></div>
+  </div>
+  <div class="row">
+    <div class="col"><app-items [items]="data"></app-items></div>
+    <div class="col"><app-items [items]="data"></app-items></div>
+  </div>
+  <div class="row">
+    <div class="col"><app-items [items]="data"></app-items></div>
+    <div class="col"><app-items [items]="data"></app-items></div>
+  </div>
+  <div class="row">
+    <div class="col"><app-items [items]="data"></app-items></div>
+    <div class="col"><app-items [items]="data"></app-items></div>
+  </div>
+  <div class="row">
+    <div class="col"><app-items [items]="data"></app-items></div>
+    <div class="col"><app-items [items]="data"></app-items></div>
+  </div>
+  <div class="row">
+    <div class="col"><app-items [items]="data"></app-items></div>
+    <div class="col"><app-items [items]="data"></app-items></div>
+  </div>
+  <div class="row">
+    <div class="col"><app-items [items]="data"></app-items></div>
+    <div class="col"><app-items [items]="data"></app-items></div>
+  </div>
+  <div class="row">
+    <div class="col"><app-items [items]="data"></app-items></div>
+    <div class="col"><app-items [items]="data"></app-items></div>
+  </div>
+  <div class="row">
+    <div class="col"><app-items [items]="data"></app-items></div>
+    <div class="col"><app-items [items]="data"></app-items></div>
+  </div>
+  <div class="row">
+    <div class="col"><app-items [items]="data"></app-items></div>
+    <div class="col"><app-items [items]="data"></app-items></div>
+  </div>
+  <div class="row">
+    <div class="col"><app-items [items]="data"></app-items></div>
+    <div class="col"><app-items [items]="data"></app-items></div>
+  </div>
+  <div class="row">
+    <div class="col"><app-items [items]="data"></app-items></div>
+    <div class="col"><app-items [items]="data"></app-items></div>
+  </div>
+  <div class="row">
+    <div class="col"><app-items [items]="data"></app-items></div>
+    <div class="col"><app-items [items]="data"></app-items></div>
+  </div>
+  <div class="row">
+    <div class="col"><app-items [items]="data"></app-items></div>
+    <div class="col"><app-items [items]="data"></app-items></div>
+  </div>
+  <div class="row">
+    <div class="col"><app-items [items]="data"></app-items></div>
+    <div class="col"><app-items [items]="data"></app-items></div>
+  </div>
+  <div class="row">
+    <div class="col"><app-items [items]="data"></app-items></div>
+    <div class="col"><app-items [items]="data"></app-items></div>
+  </div>
+  <div class="row">
+    <div class="col"><app-items [items]="data"></app-items></div>
+    <div class="col"><app-items [items]="data"></app-items></div>
+  </div>
+  <div class="row">
+    <div class="col"><app-items [items]="data"></app-items></div>
+    <div class="col"><app-items [items]="data"></app-items></div>
+  </div>
+  <div class="row">
+    <div class="col"><app-items [items]="data"></app-items></div>
+    <div class="col"><app-items [items]="data"></app-items></div>
+  </div>
+  <div class="row">
+    <div class="col"><app-items [items]="data"></app-items></div>
+    <div class="col"><app-items [items]="data"></app-items></div>
+  </div>
 </div>
