--- a/apps/default/src/app/app.component.html
+++ b/apps/default/src/app/app.component.html
@@ -1,94 +1,5 @@
 <div class="container">
   <div class="row">
-    <div class="col"><app-items [items]="data"></app-items></div>
-    <div class="col"><app-items [items]="data"></app-items></div>
-  </div>
-  <div class="row">
-    <div class="col"><app-items [items]="data"></app-items></div>
-    <div class="col"><app-items [items]="data"></app-items></div>
-  </div>
-  <div class="row">
-    <div class="col"><app-items [items]="data"></app-items></div>
-    <div class="col"><app-items [items]="data"></app-items></div>
-  </div>
-  <div class="row">
-    <div class="col"><app-items [items]="data"></app-items></div>
-    <div class="col"><app-items [items]="data"></app-items></div>
-  </div>
-  <div class="row">
-    <div class="col"><app-items [items]="data"></app-items></div>
-    <div class="col"><app-items [items]="data"></app-items></div>
-  </div>
-  <div class="row">
-    <div class="col"><app-items [items]="data"></app-items></div>
-    <div class="col"><app-items [items]="data"></app-items></div>
-  </div>
-  <div class="row">
-    <div class="col"><app-items [items]="data"></app-items></div>
-    <div class="col"><app-items [items]="data"></app-items></div>
-  </div>
-  <div class="row">
-    <div class="col"><app-items [items]="data"></app-items></div>
-    <div class="col"><app-items [items]="data"></app-items></div>
-  </div>
-  <div class="row">
-    <div class="col"><app-items [items]="data"></app-items></div>
-    <div class="col"><app-items [items]="data"></app-items></div>
-  </div>
-  <div class="row">
-    <div class="col"><app-items [items]="data"></app-items></div>
-    <div class="col"><app-items [items]="data"></app-items></div>
-  </div>
-  <div class="row">
-    <div class="col"><app-items [items]="data"></app-items></div>
-    <div class="col"><app-items [items]="data"></app-items></div>
-  </div>
-  <div class="row">
-    <div class="col"><app-items [items]="data"></app-items></div>
-    <div class="col"><app-items [items]="data"></app-items></div>
-  </div>
-  <div class="row">
-    <div class="col"><app-items [items]="data"></app-items></div>
-    <div class="col"><app-items [items]="data"></app-items></div>
-  </div>
-  <div class="row">
-    <div class="col"><app-items [items]="data"></app-items></div>
-    <div class="col"><app-items [items]="data"></app-items></div>
-  </div>
-  <div class="row">
-    <div class="col"><app-items [items]="data"></app-items></div>
-    <div class="col"><app-items [items]="data"></app-items></div>
-  </div>
-  <div class="row">
-    <div class="col"><app-items [items]="data"></app-items></div>
-    <div class="col"><app-items [items]="data"></app-items></div>
-  </div>
-  <div class="row">
-    <div class="col"><app-items [items]="data"></app-items></div>
-    <div class="col"><app-items [items]="data"></app-items></div>
-  </div>
-  <div class="row">
-    <div class="col"><app-items [items]="data"></app-items></div>
-    <div class="col"><app-items [items]="data"></app-items></div>
-  </div>
-  <div class="row">
-    <div class="col"><app-items [items]="data"></app-items></div>
-    <div class="col"><app-items [items]="data"></app-items></div>
-  </div>
-  <div class="row">
-    <div class="col"><app-items [items]="data"></app-items></div>
-    <div class="col"><app-items [items]="data"></app-items></div>
-  </div>
-  <div class="row">
-    <div class="col"><app-items [items]="data"></app-items></div>
-    <div class="col"><app-items [items]="data"></app-items></div>
-  </div>
-  <div class="row">
-    <div class="col"><app-items [items]="data"></app-items></div>
-    <div class="col"><app-items [items]="data"></app-items></div>
-  </div>
-  <div class="row">
-    <div class="col"><app-items [items]="data"></app-items></div>
-    <div class="col"><app-items [items]="data"></app-items></div>
+    <div class="col"><app-heroes [heroes]="heroes"></app-heroes></div>
   </div>
 </div>
