--- a/apps/default/src/app/components/hero/hero.component.html
+++ b/apps/default/src/app/components/hero/hero.component.html
@@ -1,7 +1,7 @@
 <div>
   <div class="card">
     <div class="card-body">
-      <h5 class="card-title">{{ model.code }} ({{ model.description }})</h5>
+      <h5 class="card-title">{{ hero.name }}</h5>
       <p class="card-text">
         Description get count: <span #descriptionGetCount>0</span>
       </p>
@@ -15,13 +15,13 @@
       </button>
       <form *ngIf="isInEditMode">
         <div class="mb-3">
-          <label [for]="model.id" class="form-label">Description</label>
+          <label [for]="hero.id" class="form-label">Description</label>
           <input
             type="text"
             class="form-control"
-            [id]="model.id"
+            [id]="hero.id"
             placeholder="Description"
-            [(ngModel)]="modelDescription"
+            [(ngModel)]="heroName"
             name="description"
           />
         </div>
@@ -36,5 +36,4 @@
       </form>
     </div>
   </div>
-  <app-items [items]="model.items" [isFirst]="false"></app-items>
 </div>
