--- a/apps/default/src/app/components/heroes/heroes.component.scss
+++ b/apps/default/src/app/components/heroes/heroes.component.scss
@@ -1,8 +1,5 @@
-.app-items {
+.app-heroes {
   padding-left: 50px;
   padding-top: 5px;
   padding-right: 5px;
-  &--first {
-    padding-left: 5px;
-  }
 }
