--- a/apps/default/src/app/app.component.html
+++ b/apps/default/src/app/app.component.html
@@ -1,5 +1,3 @@
-<div class="container">
-  <div class="row">
-    <div class="col"><app-heroes [heroes]="heroes"></app-heroes></div>
-  </div>
+<div>
+  <app-heroes [heroes]="heroes"></app-heroes>
 </div>
