--- a/apps/default/src/app/components/hero/hero.component.html
+++ b/apps/default/src/app/components/hero/hero.component.html
@@ -1,4 +1,9 @@
-<div>
+<tr>
+  <th scope="row">1</th>
+  <td>Mark</td>
+  <td>Otto</td>
+</tr>
+<!-- <div>
   <div class="card">
     <div class="card-body">
       <h5 class="card-title">{{ hero.name }}</h5>
@@ -36,4 +41,4 @@
       </form>
     </div>
   </div>
-</div>
+</div> -->
