--- a/apps/default/src/app/app.component.html
+++ b/apps/default/src/app/app.component.html
@@ -1,3 +1,5 @@
-<div>
-  <app-heroes [heroes]="heroes"></app-heroes>
+<div class="app-component">
+  <app-context title="App component">
+    <app-pets [pets]="pets"></app-pets>
+  </app-context>
 </div>
