Change compoonents structure

--- a/apps/default/src/app/app.component.html
+++ b/apps/default/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="app-component">
   <app-context title="App component">
-    <app-pets [pets]="pets"></app-pets>
+    <app-pet-list [pets]="pets"></app-pet-list>
   </app-context>
 </div>
