--- a/apps/default/src/app/app.component.html
+++ b/apps/default/src/app/app.component.html
@@ -1,5 +1,3 @@
-<div class="app-component">
-  <app-context title="App component">
-    <app-pet-list [pets]="pets"></app-pet-list>
-  </app-context>
-</div>
+<app-context title="App component">
+  <app-pets></app-pets>
+</app-context>
