--- a/apps/default/src/app/components/context/context.component.scss
+++ b/apps/default/src/app/components/context/context.component.scss
@@ -1,13 +1,9 @@
-// .app-context {
-//   padding: 5px;
-//   border: 1px solid;
-// }
-
 .app-context__title {
   font-size: 0.7rem;
 }
 
 .app-context__content {
   padding: 5px;
-  border: 1px solid;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
 }
