--- a/apps/default/src/app/components/pets/pets.component.html
+++ b/apps/default/src/app/components/pets/pets.component.html
@@ -1,5 +1,11 @@
-<div class="app-component">
-  <app-context title="Pets component">
-    <app-pet-list [pets]="pets"></app-pet-list>
-  </app-context>
-</div>
+<app-context title="Pets component">
+  <div class="app-pets">
+    <div class="app-pets__cu">
+      <app-create-pet></app-create-pet>
+      <app-update-pet [selectedPet]="selectedPet"></app-update-pet>
+    </div>
+    <div class="app-pets__list">
+      <app-pet-list [pets]="pets"></app-pet-list>
+    </div>
+  </div>
+</app-context>
