--- a/apps/default/src/app/components/context/context.component.scss
+++ b/apps/default/src/app/components/context/context.component.scss
@@ -1,3 +1,12 @@
+.app-context {
+  background: white;
+  border-radius: 5px;
+}
+
+.app-context--detect-changes {
+  background: red;
+}
+
 .app-context__title {
   font-size: 0.7rem;
 }
