--- a/apps/default/src/app/components/context/context.component.html
+++ b/apps/default/src/app/components/context/context.component.html
@@ -1,4 +1,4 @@
-<div class="app-context">
+<div class="app-context" #appContext>
   <div class="app-context__title">
     <i>{{ title }}</i>
   </div>
