Add CP effect in all components

--- a/apps/default/src/app/components/create-pet/create-pet.component.html
+++ b/apps/default/src/app/components/create-pet/create-pet.component.html
@@ -1,4 +1,4 @@
-<app-context title="Create pet component">
+<app-context [title]="title" #appContext>
   <div class="app-create-pet">
     <mat-form-field appearance="standard">
       <mat-label>Name</mat-label>
