--- a/apps/default/src/app/components/pets/pets.component.html
+++ b/apps/default/src/app/components/pets/pets.component.html
@@ -1,4 +1,4 @@
-<app-context title="Pets component">
+<app-context [title]="title" #appContext>
   <div class="app-pets">
     <div class="app-pets__cu">
       <app-create-pet></app-create-pet>
