--- a/apps/default/src/app/components/update-pet/update-pet.component.html
+++ b/apps/default/src/app/components/update-pet/update-pet.component.html
@@ -1,4 +1,4 @@
-<app-context title="Update pet component">
+<app-context [title]="title" #appContext>
   <div class="app-update-pet" *ngIf="selectedPet">
     <mat-form-field appearance="standard">
       <mat-label>Name</mat-label>
