--- a/apps/default/src/app/components/pets/pets.component.html
+++ b/apps/default/src/app/components/pets/pets.component.html
@@ -2,7 +2,7 @@
   <div class="app-pets">
     <div class="app-pets__cu">
       <app-create-pet></app-create-pet>
-      <app-update-pet [selectedPet]="selectedPet"></app-update-pet>
+      <app-update-pet></app-update-pet>
     </div>
     <div class="app-pets__list">
       <app-pet-list [pets]="pets"></app-pet-list>
