--- a/apps/default/src/app/components/update-pet/update-pet.component.html
+++ b/apps/default/src/app/components/update-pet/update-pet.component.html
@@ -2,7 +2,7 @@
   <div class="app-update-pet" *ngIf="selectedPet">
     <mat-form-field appearance="standard">
       <mat-label>Name</mat-label>
-      <input matInput placeholder="Name" [(ngModel)]="value" />
+      <input matInput placeholder="Name" [(ngModel)]="selectedPetName" />
     </mat-form-field>
     <button mat-raised-button color="primary" (click)="update()">
       Update pet
