--- a/apps/default/src/app/components/pets/pets.component.html
+++ b/apps/default/src/app/components/pets/pets.component.html
@@ -5,7 +5,7 @@
       <app-update-pet></app-update-pet>
     </div>
     <div class="app-pets__list">
-      <app-pet-list [pets]="pets"></app-pet-list>
+      <app-pet-list></app-pet-list>
     </div>
   </div>
 </app-context>
