Add create count

--- a/apps/default/src/app/components/pet-list-item/pet-list-item.component.html
+++ b/apps/default/src/app/components/pet-list-item/pet-list-item.component.html
@@ -6,6 +6,7 @@
     <div (click)="selectPet()">
       <div><b>ID: </b>{{ pet.id }}</div>
       <div><b>Name: </b>{{ pet.name }}</div>
+      <div><b>Create item count: </b><span #createItemCount>0</span></div>
       <div>
         <b>Description get count: </b><span #descriptionGetCount>0</span>
       </div>
