feature/add-app-update-pet-on-push

--- a/apps/default/src/app/components/update-pet/update-pet.component.html
+++ b/apps/default/src/app/components/update-pet/update-pet.component.html
@@ -1,5 +1,5 @@
 <app-context [title]="title" #appContext>
-  <div class="app-update-pet" *ngIf="selectedPet">
+  <div class="app-update-pet" *ngIf="selectedPet$ | async">
     <mat-form-field appearance="standard">
       <mat-label>Name</mat-label>
       <input matInput placeholder="Name" [(ngModel)]="selectedPetName" />
